--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "@angular/platform-browser": "~9.0.7",
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
+    "@azure/msal-angular": "^1.0.0-beta.4",
     "@types/gapi": "0.0.39",
     "@types/gapi.auth2": "0.0.51",
     "@types/gapi.client.drive": "^3.0.4",
     "@types/jquery": "^3.3.34",
+    "file-saver": "^2.0.2",
     "jszip": "^3.2.2",
+    "msal": "^1.2.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
